[package]
name = "MR"
version = "0.1.0"
authors = ["EelenZ <3143157934@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.9.0"
log = "0.4.11"
thiserror = "1.0.20"
anyhow = "1.0.32"
failure = "0.1.8"
